# fenics2024

./: .gitignore  .pre-commit-config.yaml  README.md  convert.py  generate_fake_abstracts.py  generate_timetable.py  merge-abstracts.py  pyproject.toml
.github/workflows/: build_docs.yml  deploy_docs.yml  generate_fake_abstracts.yml
book/: README.md  all_abstracts.md  myst.yml
book/abstracts/: a-discontinuous-galerkin.md  a-fenics-based-framework-for-modeling-cardiac-growth-and-remodeling.md  a-fenics-based-framework.md  a-monolithic.md  automated-optimisation.md  block-preconditioners-for-(moving-domain)-fluid-dynamics-coupled-to-physics--and-projection-based-reduced-models.md  checkpoint-schedules-for-adjoint-solvers.md  closing-and-opening-the-unified-form-language.md  control-theory.md  custom-quadrature-at-runtime-in-fenicsx.md  data-parallel-based.md  determination-of-navier.md  dolfinx-and-ffcx.md  efficient-and-scalable-solvers-for-a-cell-by-cell-dual-poroelasticity-problem.md  enabling-unstructured-mesh.md  equilibration-based.md  estimation-of-optimal-inlet-boundary-condition-for-blood-flow-assessment-in-abdominal-aortic-aneurysm-using-variational-data-assimilation-.md  estimation-of-optimal.md  expressing-general-constitutive-models-using-algorithmic-automatic-differentiation-in-dolfinx.md  expressing-general.md  fatigue-simulation.md  fenics-for-solid-stresses.md  festim.md  function-scaling.md  gpu-acceleration.md  high-order,-structure-preserving-schemes-on-gpu-architectures-in-fenicsx.md  higher-order-time-stepping-in-multiphysics-using-precice.md  higher-order-time.md  how-to-evaluate-wall-shear-stress.md  implementation-in-fenics.md  implementation-of-the.md  improved-post-processing-of-transient-heat-transfer-experiments-using-the-finite-element-method.md  integral-boundary-conditions-in-phase-field-models.md  (+35 more)
template/: README.md  fenicsconf.def  fenicsconf.sty  template.tex  template.yml
